# dynamics-api-desktop-app

./: README.md  api.py  app.py  main.py  pyproject.toml  requirements.txt
src/: auth_client.py  main.py  main_flet.py  main_window.py  models.py
src/api/: api_client.py  auth_client.py
src/components/: tabs.py
src/pages/: main_flet.py  main_window.py
src/ui/: ui_mock_flet.py
