[project]
name = "dynamics-api-desktop-app"
version = "0.1.0"
description = "Microsoft Dynamics APIと連携するPython製デスクトップアプリケーション"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet[all]>=0.28.2",
    "msal>=1.32.3",
    "ruff>=0.11.10",
]

[project.scripts]
dynamics-api-app = "src.main:main"
